--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -12,10 +12,14 @@
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "socket.io-client": "^4.4.0",
+    "react-scripts": "5.0.0",
+    "socket.io-client": "^4.4.1",
     "typescript": "^4.5.2",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "nth-check": "2.0.1"
+  },
+  "resolutions": {
+    "nth-check": "2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
